tests/ui/consts/const-eval/ub-slice-get-unchecked.stderr
error[E0015]: cannot call non-const fn `core::slice::<impl [()]>::get_unchecked::<std::ops::Range<usize>>` in constants
  --> $DIR/ub-slice-get-unchecked.rs:7:29
   |
LL | const B: &[()] = unsafe { A.get_unchecked(3..1) };
   |                             ^^^^^^^^^^^^^^^^^^^
   |
   = note: calls in constants are limited to constant functions, tuple structs and tuple variants

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0015`.
